View Issue Details

IDProjectCategoryView StatusLast Update
0024055Open CASCADEOCCT:Data Exchangepublic2014-11-11 12:57
ReporterszvAssigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.6.0 
Target Version6.8.0Fixed in Version6.8.0 
Summary0024055: Reading a STEP file produces invalid shape
DescriptionThis problem was reported by Luigi Pacco (ProgeCAD):

"... we're are testing the software but we're facing a problem. ...I'm asking that because many times conversions from step to dxf lead to files that AutoCAD doesn't manage correctly (we used version 2013 and 2014)."

The analysis done by szv:
"...[After reading the STEP file in Draw,] the command 'checkshape' reports 12 similar problems in the result - there are 12 cone-like faces that are translated incorrectly (no seam edge is present).
Thus, translating such a shape back to DXF will likely lead to problems, independently of the parameters."
Steps To Reproduce# Load needed commands
pload ALL
# Read STEP file
stepread D:/STEP-DXF-SAMPLES/8MTF-75LS05.step a *
# Show the result in a 3d viewer
axo; fit
# Check the result for validity
checkshape a_1
TagsNo tags attached.
Test case numberbugs step(014) bug24055

Attached Files

  • 8MTF-75LS05.zip (902,655 bytes)

Relationships

parent of 0024976 closedbugmaster REGRESSIONS in de test cases in Debug mode 

Activities

szv

2013-07-02 09:38

manager  

8MTF-75LS05.zip (902,655 bytes)

szv

2013-07-02 09:42

manager   ~0024937

An additional confirmation from Luigi Pacco (ProgeCAD):
"... About the step file you asked the permission to use, it's just a step file we found on Internet (if you google for it you'll find it easily), so I guess there should not be any problem."

bugmaster

2014-01-29 16:41

administrator   ~0027690

Problem is reproduced.
Creation of testing case is required

apn

2014-02-13 13:36

administrator   ~0027889

Test case bugs/step/bug24055 was added to master.

ika

2014-04-24 18:41

manager   ~0029065

Add checks for cone-like surfaces during seam fixing

Branch CR24055 is ready to be reviewed.

Dear GKA,
please review.

gka

2014-04-25 12:47

developer   ~0029072

Branch CR24055 is ready to be tested

mkv

2014-04-30 12:10

tester   ~0029160

Dear BugMaster,

Branch CR24055 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 0b3988f65ee38541778aaada342fb9b51016d3cd

Number of compiler warnings:

occt component :
Linux: 19 (18 on master)
Windows: 0 (0 on master)
MacOS: 352 (351 on master)

There is new additional compilation warning on Linux platform:
ShapeFix_Face.cxx:1538, GNU C Compiler 4 (gcc), Priority: Normal
suggest parentheses around ‘&&’ within ‘||’

There is new additional compilation warning on MacOS platform:
ShapeFix_Face.cxx:1537, GNU C Compiler 4 (gcc), Priority: Normal
'&&' within '||' [-Wlogical-op-parentheses]

products component :
Linux: 12 (12 on master)
Windows: 2 (2 on master)

Regressions/Differences:
http://occt-tests/CR24055-master-occt/Debian60-64/summary.html
http://occt-tests/CR24055-master-occt/Windows-32-VC9/summary.html
Improvements:
bugs step(014) bug24055
Failed:
bugs iges(003) bug23622_1, bug23622_2
de step_4(007) H6

Testing cases:
http://occt-tests/CR24055-master-occt/Debian60-64/bugs/step/bug24055.html
http://occt-tests/CR24055-master-occt/Windows-32-VC9/bugs/step/bug24055.html
bugs step(014) bug24055 - Improvements

Testing on Linux:
Total MEMORY difference: 355337488 / 355403972
Total CPU difference: 71450.9699999999 / 55129.48999999973

Testing on Windows:
Total MEMORY difference: 378693964 / 381515540
Total CPU difference: 35419.75 / 42985.5

There are no differences in images found by testdiff.

ika

2014-05-16 13:08

manager   ~0029369

Delete check for missing degenerated edge for cones in FixMissingSeam() function, because this check is exist in FixPeriodicDegenerated(). Check for uniqueness of wire is unnecessary after this.

Branch CR24055 is ready to be reviewed.
Dear GKA,
Please review.

Note:
bugs iges(003) bug23622_1, bug23622_2
de step_4(007) H6
are not regressions, but right behavior (copy-paste mistake in finding place for inserting seam was corrected, so some edges don't splitting to insert seam)

gka

2014-05-20 11:22

developer   ~0029409

Branch CR24055 is ready to be tested.

apv

2014-05-29 14:00

tester   ~0029608

Last edited: 2014-05-29 14:29

Dear BugMaster,

Branch CR24055 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: de4ca72946941768b47302c10652ff51cbb86f64

Number of compiler warnings:

Linux: 17 (17 on master)
Windows: 0 (0 on master)
MacOS: 202 (202 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
http://occt-tests/CR24055-master-occt/Debian60-64/summary.html
http://occt-tests/CR24055-master-occt/Windows-32-VC9/summary.html
bugs - iges (003) - bug23622_1
bugs - iges (003) - bug23622_2
de - step_4 (007) - H6

Testing cases:
http://occt-tests/CR24055-master-occt/Debian60-64/bugs/step/bug24055.html
http://occt-tests/CR24055-master-occt/Windows-32-VC9/bugs/step/bug24055.html
bugs - step (014) - bug24055: OK

Testing on Linux:
Total MEMORY difference: 227067572 / 226956672
Total CPU difference: 36727.180000000146 / 38998.4900000001

Testing on Windows:
Total MEMORY difference: 21959504 / 21996828
Total CPU difference: 6238.8125 / 6433.640625

Related Changesets

occt: master 16c7b642

2014-05-29 12:43:38

ika


Committer: apn Details Diff
0024055: Reading a STEP file produces invalid shape

Add checks for cone-like surfaces during seam fixing
Delete check for missing degenerated edge for cones in FixMissingSeam() function, because this check is exist in FixPeriodicDegenerated(). Check for uniqueness of wire is unnecessary after this.
Update of test-cases
Affected Issues
0024055
mod - src/ShapeFix/ShapeFix_Face.cxx Diff File
mod - tests/bugs/iges/bug23622_1 Diff File
mod - tests/bugs/iges/bug23622_2 Diff File
mod - tests/bugs/step/bug24055 Diff File
mod - tests/de/step_4/H6 Diff File

Issue History

Date Modified Username Field Change
2013-07-02 09:37 szv New Issue
2013-07-02 09:37 szv Assigned To => gka
2013-07-02 09:38 szv File Added: 8MTF-75LS05.zip
2013-07-02 09:42 szv Note Added: 0024937
2014-01-29 16:41 bugmaster Note Added: 0027690
2014-01-29 16:41 bugmaster Assigned To gka => apn
2014-01-29 16:41 bugmaster Status new => assigned
2014-02-13 13:36 apn Note Added: 0027889
2014-02-13 13:36 apn Test case number => bugs step bug24055
2014-02-13 13:36 apn Assigned To apn => gka
2014-04-18 15:43 gka Assigned To gka => szv
2014-04-18 15:44 gka Assigned To szv => gka
2014-04-18 15:45 gka Assigned To gka => ika
2014-04-24 18:41 ika Note Added: 0029065
2014-04-24 18:41 ika Assigned To ika => gka
2014-04-24 18:41 ika Status assigned => resolved
2014-04-25 12:47 gka Note Added: 0029072
2014-04-25 12:47 gka Status resolved => reviewed
2014-04-25 17:55 mkv Assigned To gka => mkv
2014-04-30 12:10 mkv Note Added: 0029160
2014-04-30 12:11 mkv Test case number bugs step bug24055 => bugs step(014) bug24055
2014-04-30 12:11 mkv Assigned To mkv => ika
2014-04-30 12:11 mkv Status reviewed => assigned
2014-05-16 13:08 ika Note Added: 0029369
2014-05-16 13:08 ika Assigned To ika => gka
2014-05-16 13:08 ika Status assigned => resolved
2014-05-20 11:22 gka Note Added: 0029409
2014-05-20 11:22 gka Status resolved => reviewed
2014-05-22 11:08 bugmaster Assigned To gka => apn
2014-05-22 11:09 bugmaster Target Version => 6.8.0
2014-05-26 17:42 apn Assigned To apn => apv
2014-05-29 14:00 apv Note Added: 0029608
2014-05-29 14:29 apv Assigned To apv => bugmaster
2014-05-29 14:29 apv Status reviewed => tested
2014-05-29 14:29 apv Note Edited: 0029608
2014-05-30 12:59 apn Changeset attached => occt master 16c7b642
2014-05-30 12:59 apn Assigned To bugmaster => apn
2014-05-30 12:59 apn Status tested => verified
2014-05-30 12:59 apn Resolution open => fixed
2014-06-03 18:12 kgv Relationship added related to 0024983
2014-06-03 18:13 kgv Relationship deleted related to 0024983
2014-08-04 17:08 bugmaster Relationship added parent of 0024976
2014-11-11 12:46 aiv Fixed in Version => 6.8.0
2014-11-11 12:57 aiv Status verified => closed